--- a/index.htm
+++ b/index.htm
@@ -13,11 +13,13 @@
     </head>
     <body>
         <form action="#">
-            <img src="img/user_icon.png">
+            <div class="user_img">
+                <img src="img/user_icon.png">
+            </div>
             <input type="text"  class="btn" name="user" placeholder="Digite seu Usuário">
             <input type="password" class="btn" name="user_password" placeholder="Digite sua senha">
-            <input type="submit" class="btn-2" value="Entrar">
-            <label>Criar conta..</label>
+            <input type="submit" class="btn_2" value="Entrar">
+            <label><a href="#">Criar conta..</a></label>
         </form>
     </body>    
 </html>
