--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang=pt-BR>
     <head>
-        <!--Ancorage CSS-->
+        <meta charset="UTF-8">
+        <!--Link CSS-->
         <link rel="stylesheet" href="style/style.css">
         
         <!--Layou responsivo-->
@@ -15,7 +16,7 @@
         <form action="#">
             <div class="user_img">
                 <img src="img/user_icon.png">
-            </div>
+            </div>            
             <input type="text"  class="btn" name="user" placeholder="Digite seu Usuário">
             <input type="password" class="btn" name="user_password" placeholder="Digite sua senha">
             <input type="submit" class="btn_2" value="Entrar">
